--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
 <div class="container-fluid padding" id="portfolio">
   <div class="row welcome text-center">
     <div class="col-12">
-      <h1 class="display-4">Sketches and Presentations</h1>
     </div>
     <hr>
   </div>
@@ -205,7 +204,19 @@
 
   <div class="container-fluid padding">
     <div class="row padding">
-    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <div class="card">
+          <img class="card-img-top" src="img/api.jpg" alt="Code Image">
+          <div class="card-body">
+            <h4 class="card-title">REST API Demonstration</h4>
+            <p>Here is a demonstration of an API. Use SoapUI to open XML file for full experience</p>
+            <a href="docs/api-prod.xml" class="btn btn-outline-secondary" download="API Production">SoapUI XML File</a>
+            <a href="https://donner-api-gateway.herokuapp.com" class="btn btn-outline-secondary">Heroku Deployment</a>
+          </div>
+        </div>
+      </div>
+
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <div class="card">
           <img class="card-img-top" src="img/presentation.jpg" alt="Presentations">
           <div class="card-body">
@@ -216,7 +227,7 @@
         </div>
       </div>
 
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <div class="card">
           <img class="card-img-top" src="img/sketch.jpg" alt="Sketches">
           <div class="card-body">
