--- a/web-430/donner-tech-value-stream.html
+++ b/web-430/donner-tech-value-stream.html
@@ -56,7 +56,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title">PLACEHOLDER PRESENTATION</h4>
+          <h4 class="card-title">The Technology Value Stream</h4>
           <video controls reload="none" style="width:1000px;">
             <source src="../devops-presentations/technology-valuestream.mp4" type="video/mp4" />
             </video> 
@@ -67,6 +67,22 @@
   </div>
   <br>
   <br>
+  <div class="container-fluid padding">
+    <div class="row padding">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">The Two Pizza Team Rule</h4>
+            <video controls reload="none" style="width:1000px;">
+              <source src="../devops-presentations/two-pizza.mp4" type="video/mp4" />
+              </video> 
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    <br>
+    <br>
   <!-- **PLACEHOLDER FOR NEW PRESENTATIONS**
   <div class="container-fluid padding">
     <div class="row padding">
